# br-pbuilder

./: .gitignore  AUTHORS  COPYING  INSTALL  README  README.md  configure.ac  timings.txt
patches/: 0001-br2_makefile_add_pbuilder.patch  0002-br2-external-lock-outputdir.patch  0003-br2-pkg-generic-add-lock.patch  br2_makefile_add_pbuilder.patch
patches/2022.02/: 0001-br2_makefile_add_pbuilder.patch  0002-br2-external-exec-only-once.patch
patches/2023.11/: 0001-br2_makefile_add_pbuilder.patch
scripts/: install.sh  pbuilder.py
src/: Makefile.am  graph_common.c  graph_common.h  graph_create.c  graph_create.h  graph_exec.c  graph_exec.h  main.c  utils.c  utils.h
